@@ -2,7 +2,10 @@ This file shows a history of changes between PrBoom versions since v2.1.0.
 For historical reference, the complete LxDoom changelog follows it.
 
 Changes from v2.4.5 to v2.4.6
+- Fixed sound origin for switches. This is compatibility optioned.
+  Patch #1533045 by RjY.
 - Fixed "oof" sound when hitting ground while already dead
+  Patch #1532700 by RjY.
 - Unified drawing functions, this speeds things up a bit and fixes most
   artifacts on small numbers and fonts in high resolution modes.
 - Mac OS X: Add resolution and video mode (OpenGL vs software) selection to
